--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 *.yml
-**/__pycache__
+__pycache__/
+*.pyc
+
 /engines/*
 !/engines/README.md
+!/engines/bot/
+!/engines/bot/**
+
 lichess_bot_auto_logs/*
 .vscode/*
 .vs/*
